--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,45 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="modal-dialog text-center">
+      <div class="col-sm-8 main-section">
+        <div class="modal-content">
+          <div class="col-12 user-img">
+            <img src="img/avatar.png" />
+          </div>
+          <form class="col-12">
+            <div class="form-group" id="user-group">
+              <input
+                type="text"
+                class="form-control"
+                id="txtUsuario"
+                placeholder="Nombre de usuario"
+              />
+            </div>
+            <div class="form-group">
+              <input
+                type="password"
+                class="form-control"
+                id="txtPassword"
+                placeholder="Contraseña"
+              />
+            </div>
+            <!--<button type="submit" class="btn btn-primary" id="btnIngresar">
+              <ion-icon name="log-in-outline"></ion-icon>
+              Ingresar
+            </button>-->
+            <input type="button" value="Ingresar" id="btnIngresar" />
+          </form>
+          <div class="col-12 forgot">
+            <a href="#">Recordar contraseña</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="Js/logicaNegociosUsuarios.js"></script>
+    <script src="js/logicaInterfazInicioSesion.js"></script>
+  </body>
 </html>
