soluciona problema en referencia

--- a/admin.html
+++ b/admin.html
@@ -35,12 +35,13 @@
                     <th scope="col">Categoria</th>
                   </tr>
                 </thead>
-                <tbody id="tablas">
+                <tbody id="tabla">
                 </tbody>
               </table>
                 
             </div>
         </div>
+        <a href="/index.htm" target="_blank" onClick="window.open(this.href, this.target, 'width=300,height=400'); return false;">hola  </a>
         <script src="./js/admin.js"></script>
             </body>
         </html>
