--- a/cliente.html
+++ b/cliente.html
@@ -2,11 +2,11 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Salud y tecnologia" />
+    <meta name="title" content="NetFilms" />
+    <meta name="description" content="Videos bajo demanda" />
     <meta
       name="keywords"
-      content="noticia tecnologia, salud y tecnologia
-      emergente"
+      content="videos on line, accion, documentales, series, comedias"
       />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript"
