--- a/admin.html
+++ b/admin.html
@@ -33,6 +33,8 @@
                     <th scope="col">Nombre</th>
                     <th scope="col">Descripcion</th>
                     <th scope="col">Categoria</th>
+                    <th scope="col">Publicado</th>
+                    <th scope="col">Acciones</th>
                   </tr>
                 </thead>
                 <tbody id="tabla">
@@ -43,5 +45,6 @@
         </div>
        
         <script src="./js/admin.js"></script>
-            </body>
+            
+    </body>
         </html>
