--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+    <!-- <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>-->
   </head>
   <body>
     <div class="modal-dialog text-center">
@@ -39,11 +39,11 @@
                 placeholder="Contraseña"
               />
             </div>
-            <!--<button type="submit" class="btn btn-primary" id="btnIngresar">
-              <ion-icon name="log-in-outline"></ion-icon>
+            <button type="button" class="btn btn-primary" id="btnIngresar">
+              <!--<ion-icon name="log-in-outline"></ion-icon>-->
               Ingresar
-            </button>-->
-            <input type="button" value="Ingresar" id="btnIngresar" />
+            </button>
+            <!--<input type="button" value="Ingresar" id="btnIngresar" />-->
           </form>
           <div class="col-12 forgot">
             <a href="#">Recordar contraseña</a>
