--- a/menu.html
+++ b/menu.html
@@ -2,22 +2,36 @@
   <div class="container">
     <!-- Logo -->
     <span class="navbar-logotexto"><a href="#">NetFilms</a></span>
-    <button class="navbar-toggler" type="button" data-toggle="collapse"
-      data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01"
-      aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarTogglerDemo01"
+      aria-controls="navbarTogglerDemo01"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <button type="button" data-toggle="collapse"
+    <button
+      type="button"
+      data-toggle="collapse"
       data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false"
-      aria-label="Toggle navigation" class="navbar-toggler"><span
-        class="navbar-toggler-icon"></span></button>
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+      class="navbar-toggler"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
     <div id="navbarSupportedContent" class="collapse navbar-collapse">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active"><a href="#" class="nav-link">Home
-          </a></li>
+        <li class="nav-item active"><a href="#" class="nav-link">Home </a></li>
         <li class="nav-item"><a href="#" class="nav-link">Ingresar</a></li>
+        <li class="nav-item">
+          <a href="Index.html" class="nav-link">Cerrar sesion</a>
+        </li>
       </ul>
       <div class="search-container">
         <form>
@@ -26,6 +40,5 @@
         </form>
       </div>
     </div>
-
   </div>
 </nav>
