prueba de mostrar peliculas en el slider

--- a/cliente.html
+++ b/cliente.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript"
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="js/funciones.js"></script>
+    
     <link rel="stylesheet" href="css/front-style.css" />
     <link
       rel="stylesheet"
@@ -58,36 +58,7 @@
       <div class="wrapper">
         <section id="cat1-sec1">
           <a href="#cat1-sec3">‹</a>
-          <div class="item">
-            <img
-              src="img/hed.webp"
-              />
-          </div>
-          <div class="item">
-            <img
-              src="img/flash.webp"
-              />
-          </div>
-          <div class="item">
-            <img
-              src="img/jonyenglish.webp"
-              />
-          </div>
-          <div class="item">
-            <img
-              src="img/marginal.webp"
-              />
-          </div>
-          <div class="item">
-            <img
-              src="img/thewitcher.jpg"
-              />
-          </div>
-          <div class="item">
-            <img
-              src="img/simuladores.webp"
-              />
-          </div>
+          <div id="slider"></div>
           <a href="#cat1-sec2">›</a>
         </section>
         <section id="cat1-sec2">
@@ -283,5 +254,6 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"></script>
+      <script src="js/funciones.js"></script>
   </body>
 </html>
