--- a/menu.html
+++ b/menu.html
@@ -30,7 +30,9 @@
         <li class="nav-item active"><a href="#" class="nav-link">Home </a></li>
         <li class="nav-item"><a href="#" class="nav-link">Ingresar</a></li>
         <li class="nav-item">
-          <a href="Index.html" class="nav-link">Cerrar sesion</a>
+          <a onclick="location.replace('index.html')" class="nav-link"
+            >Cerrar sesion</a
+          >
         </li>
       </ul>
       <div class="search-container">
