arreglo en funciones.js para el estilo de las imagenes en el slider

--- a/cliente.html
+++ b/cliente.html
@@ -7,48 +7,57 @@
     <meta
       name="keywords"
       content="videos on line, accion, documentales, series, comedias"
-      />
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="text/javascript"
-      src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    
+    <script
+      type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"
+    ></script>
+
     <link rel="stylesheet" href="css/front-style.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
-      />
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Rosario:ital,wght@0,500;0,700;1,700&display=swap"
-      rel="stylesheet">
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
       rel="stylesheet"
-      />
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-      />
+    />
   </head>
 
   <body class="bg-black">
-
     <header>
       <div class="fixed-top" w3-include-html="menu.html"></div>
       <div id="videoDiv">
         <div id="videoBlock">
-          <video id="video" preload autoplay muted loop
-            class="embed-responsive embed-responsive-16by9">
-            <source src="videos/sample_1280x720_5mb.mp4" type="video/mp4">
+          <video
+            id="video"
+            preload
+            autoplay
+            muted
+            loop
+            class="embed-responsive embed-responsive-16by9"
+          >
+            <source src="videos/sample_1280x720_5mb.mp4" type="video/mp4" />
           </video>
         </div>
       </div>
       <div class="resumen-peli">
         <h3>Nombre de la Pelicula</h3>
         <p>breve reseña...</p>
-        <button id="btnPlay" onclick="openPlayer()"><i class="fa fa-play-circle"
-            aria-hidden="true"></i> Reproducir</button>
+        <button id="btnPlay" onclick="openPlayer()">
+          <i class="fa fa-play-circle" aria-hidden="true"></i> Reproducir
+        </button>
       </div>
     </header>
     <!-- MAIN -->
@@ -58,40 +67,28 @@
       <div class="wrapper">
         <section id="cat1-sec1">
           <a href="#cat1-sec3">‹</a>
-          <div id="slider"></div>
+          <div id="slider" class="d-flex flex-row"></div>
           <a href="#cat1-sec2">›</a>
         </section>
         <section id="cat1-sec2">
           <a href="#cat1-sec1">‹</a>
           <div class="item">
-            <img
-              src="img/apache.jpg"
-              />
+            <img src="img/apache.jpg" />
           </div>
           <div class="item">
-            <img
-              src="img/spartacus.webp"
-              />
+            <img src="img/spartacus.webp" />
           </div>
           <div class="item">
-            <img
-              src="img/lanina.jpg"
-              />
+            <img src="img/lanina.jpg" />
           </div>
           <div class="item">
-            <img
-              src="img/scielos.webp"
-              />
+            <img src="img/scielos.webp" />
           </div>
           <div class="item">
-            <img
-              src="img/call-saul.jpg"
-              />
+            <img src="img/call-saul.jpg" />
           </div>
           <div class="item">
-            <img
-              src="img/elfinal.webp"
-              />
+            <img src="img/elfinal.webp" />
           </div>
 
           <a href="#cat1-sec3">›</a>
@@ -99,145 +96,96 @@
         <section id="cat1-sec3">
           <a href="#cat1-sec2">‹</a>
           <div class="item">
-            <img
-              src="img/spartacus.webp"
-              />
+            <img src="img/spartacus.webp" />
           </div>
           <div class="item">
-            <img
-              src="img/call-saul.jpg"
-              />
+            <img src="img/call-saul.jpg" />
           </div>
           <div class="item">
-            <img
-              src="img/elfinal.webp"
-              />
+            <img src="img/elfinal.webp" />
           </div>
           <div class="item">
-            <img
-              src="img/lanina.jpg"
-              />
+            <img src="img/lanina.jpg" />
           </div>
           <div class="item">
-            <img
-              src="img/scielos.webp"
-              />
+            <img src="img/scielos.webp" />
           </div>
           <div class="item">
-            <img
-              src="img/thewitcher.jpg"
-              />
+            <img src="img/thewitcher.jpg" />
           </div>
           <a href="#cat1-sec1">›</a>
         </section>
       </div>
       <!--Categoria 2 de peliculas (Comedia)-->
-      <div class="tit-section"><h5>Comedia </h5></div>
+      <div class="tit-section"><h5>Comedia</h5></div>
       <div class="wrapper">
         <section id="cat2-sec1">
           <a href="#cat2-sec3">‹</a>
           <div class="item">
-            <img
-              src="img/apache.jpg"
-              />
+            <img src="img/apache.jpg" />
           </div>
           <div class="item">
-            <img
-              src="img/spartacus.webp"
-              />
+            <img src="img/spartacus.webp" />
           </div>
           <div class="item">
-            <img
-              src="img/call-saul.jpg"
-              />
+            <img src="img/call-saul.jpg" />
           </div>
           <div class="item">
-            <img
-              src="img/elfinal.webp"
-              />
+            <img src="img/elfinal.webp" />
           </div>
           <div class="item">
-            <img
-              src="img/lanina.jpg"
-              />
+            <img src="img/lanina.jpg" />
           </div>
           <div class="item">
-            <img
-              src="img/scielos.webp"
-              />
+            <img src="img/scielos.webp" />
           </div>
           <a href="#cat2-sec2">›</a>
         </section>
         <section id="cat2-sec2">
           <a href="#cat2-sec1">‹</a>
           <div class="item">
-            <img
-              src="img/jonyenglish.webp"
-              />
+            <img src="img/jonyenglish.webp" />
           </div>
           <div class="item">
-            <img
-              src="img/simuladores.webp"
-              />
+            <img src="img/simuladores.webp" />
           </div>
           <div class="item">
-            <img
-              src="img/apache.jpg"
-              />
+            <img src="img/apache.jpg" />
           </div>
           <div class="item">
-            <img
-              src="img/spartacus.webp"
-              />
+            <img src="img/spartacus.webp" />
           </div>
           <div class="item">
-            <img
-              src="img/call-saul.jpg"
-              />
+            <img src="img/call-saul.jpg" />
           </div>
           <div class="item">
-            <img
-              src="img/thewitcher.jpg"
-              />
+            <img src="img/thewitcher.jpg" />
           </div>
           <a href="#cat2-sec3">›</a>
         </section>
         <section id="cat2-sec3">
           <a href="#cat2-sec2">‹</a>
           <div class="item">
-            <img
-              src="img/jonyenglish.webp"
-              />
+            <img src="img/jonyenglish.webp" />
           </div>
           <div class="item">
-            <img
-              src="img/simuladores.webp"
-              />
+            <img src="img/simuladores.webp" />
           </div>
           <div class="item">
-            <img
-              src="img/apache.jpg"
-              />
+            <img src="img/apache.jpg" />
           </div>
           <div class="item">
-            <img
-              src="img/spartacus.webp"
-              />
+            <img src="img/spartacus.webp" />
           </div>
           <div class="item">
-            <img
-              src="img/call-saul.jpg"
-              />
+            <img src="img/call-saul.jpg" />
           </div>
           <div class="item">
-            <img
-              src="img/thewitcher.jpg"
-              />
+            <img src="img/thewitcher.jpg" />
           </div>
           <a href="#cat2-sec1">›</a>
         </section>
       </div>
-
     </main>
     <div w3-include-html="footer.html"></div>
     <!--Funcion para todos los elementos includes-->
@@ -249,11 +197,10 @@
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"></script>
-      <script src="js/funciones.js"></script>
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"></script>
+    <script src="js/funciones.js"></script>
   </body>
 </html>
