--- a/footer.html
+++ b/footer.html
@@ -1,1 +1,37 @@
-<p style="text-align: center; color:#999">--FOOTER---</p>
+<!-- Footer -->
+<footer>
+  <!-- Footer Elements -->
+
+  <div class="d-flex justify-content-center mt-5 py-5">
+    <!-- Facebook -->
+    <a href="#">
+      <i class="fa fa-facebook-f white-text fa-2x mx-3"> </i>
+    </a>
+    <!-- Twitter -->
+    <a href="#">
+      <i class="fa fa-twitter white-text fa-2x mx-3"> </i>
+    </a>
+    <!-- Google +-->
+    <a href="#">
+      <i class="fa fa-google-plus white-text fa-2x mx-3"> </i>
+    </a>
+    <!--Linkedin -->
+    <a href="#">
+      <i class="fa fa-linkedin white-text fa-2x mx-3"> </i>
+    </a>
+    <!--Instagram-->
+    <a href="#">
+      <i class="fa fa-instagram white-text fa-2x mx-3"> </i>
+    </a>
+  </div>
+
+  <!-- Footer Elements -->
+
+  <!-- Copyright -->
+  <div class="text-center py-3">
+    © 2020 Copyright:
+    <a href="#">NetFilms.com</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
