--- a/cliente.html
+++ b/cliente.html
@@ -55,7 +55,7 @@
       <div class="resumen-peli">
         <h3>Nombre de la Pelicula</h3>
         <p>breve reseña...</p>
-        <button id="btnPlay" onclick="openPlayer()">
+        <button id="btnPlay" data-target="#player" data-toggle="modal">
           <i class="fa fa-play-circle" aria-hidden="true"></i> Reproducir
         </button>
       </div>
@@ -121,24 +121,7 @@
       <div class="wrapper">
         <section id="cat2-sec1">
           <a href="#cat2-sec3">‹</a>
-          <div class="item">
-            <img src="img/apache.jpg" />
-          </div>
-          <div class="item">
-            <img src="img/spartacus.webp" />
-          </div>
-          <div class="item">
-            <img src="img/call-saul.jpg" />
-          </div>
-          <div class="item">
-            <img src="img/elfinal.webp" />
-          </div>
-          <div class="item">
-            <img src="img/lanina.jpg" />
-          </div>
-          <div class="item">
-            <img src="img/scielos.webp" />
-          </div>
+          <div id="slider_comedia" class="d-flex flex-row"></div>
           <a href="#cat2-sec2">›</a>
         </section>
         <section id="cat2-sec2">
@@ -186,8 +169,88 @@
           <a href="#cat2-sec1">›</a>
         </section>
       </div>
+      <!--Categoria 3 de peliculas (Terror)-->
+      <div class="tit-section"><h5>Terror</h5></div>
+      <div class="wrapper">
+        <section id="cat3-sec1">
+          <a href="#cat3-sec3">‹</a>
+          <div id="slider_terror" class="d-flex flex-row"></div>
+          <a href="#cat3-sec2">›</a>
+        </section>
+        <section id="cat3-sec2">
+          <a href="#cat3-sec1">‹</a>
+          <div class="item">
+            <img src="img/apache.jpg" />
+          </div>
+          <div class="item">
+            <img src="img/spartacus.webp" />
+          </div>
+          <div class="item">
+            <img src="img/lanina.jpg" />
+          </div>
+          <div class="item">
+            <img src="img/scielos.webp" />
+          </div>
+          <div class="item">
+            <img src="img/call-saul.jpg" />
+          </div>
+          <div class="item">
+            <img src="img/elfinal.webp" />
+          </div>
+
+          <a href="#cat3-sec3">›</a>
+        </section>
+        <section id="cat3-sec3">
+          <a href="#cat3-sec2">‹</a>
+          <div class="item">
+            <img src="img/spartacus.webp" />
+          </div>
+          <div class="item">
+            <img src="img/call-saul.jpg" />
+          </div>
+          <div class="item">
+            <img src="img/elfinal.webp" />
+          </div>
+          <div class="item">
+            <img src="img/lanina.jpg" />
+          </div>
+          <div class="item">
+            <img src="img/scielos.webp" />
+          </div>
+          <div class="item">
+            <img src="img/thewitcher.jpg" />
+          </div>
+          <a href="#cat3-sec1">›</a>
+        </section>
+      </div>
     </main>
     <div w3-include-html="footer.html"></div>
+    <!-- Modal PLAYER -->
+    <div
+      class="modal fade modal-dialog-center"
+      id="player"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalLongTitle"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <video
+            id="video"
+            style="width: 100%; height: 100%"
+            preload
+            autoplay
+            muted
+            loop
+            class="embed-responsive embed-responsive-16by9"
+          >
+            <source src="videos/sample_2.mp4" type="video/mp4" />
+          </video>
+        </div>
+      </div>
+    </div>
+    <!--//Modal PLAYER -->
     <!--Funcion para todos los elementos includes-->
     <script src="js/includehtml.js"></script>
     <script>
