--- a/admin.html
+++ b/admin.html
@@ -9,7 +9,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
-    />
+      />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -18,12 +18,11 @@
       <div class="main-menu">
         <nav
           class="navbar navbar-expand-lg navbar-light fixed-top"
-          id="transparenciaNavbar"
-        >
+          id="transparenciaNavbar">
           <div class="container">
-            <a class="navbar-brand" href="#"
-              ><img src="img/logo.png" class="logo-brand" alt="logo" id="logo"
-            /></a>
+            <a class="navbar-brand" href="#"><img src="img/logo.png"
+                class="logo-brand" alt="logo" id="logo"
+                /></a>
             <a class="navbar-brand h1" href="#">NetFilms</a>
             <button
               class="navbar-toggler"
@@ -32,8 +31,7 @@
               data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent"
               aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
+              aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -42,9 +40,7 @@
                   <a
                     class="nav-link"
                     href="#"
-                    onclick="location.replace('index.html')"
-                    >Cerrar sesion</a
-                  >
+                    onclick="location.replace('index.html')">Cerrar sesion</a>
                 </li>
               </ul>
             </div>
@@ -74,13 +70,12 @@
     <section id="edicion">
       <div class="container">
         <div class="row">
-          <div class="col-10"></div>
+          <div class="col-12"></div>
           <div class="col">
             <button
               type="button"
               class="btn btn-secondary btn-lg"
-              id="agregarPelicula"
-            >
+              id="agregarPelicula">
               Agregar Pelicula
             </button>
           </div>
