oculta accion si no hay peliculas de accion

--- a/cliente.html
+++ b/cliente.html
@@ -46,7 +46,7 @@
     <main role="main" class="d-flex flex-row flex-wrap">
       <div id="zonasliders">
         <!--Categoria 1 de peliculas (Accion)-->
-        <div class="tit-section"><h5>Acción</h5></div>
+        <div class="tit-section" id="sAcc"><h5>Acción</h5></div>
         <div class="wrapper">
           <section>
             <a href="#">‹</a>
