arreglo en la navegacion y error 404

--- a/admin.html
+++ b/admin.html
@@ -4,48 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NetFilms</title>
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
-      />
-    <link rel="stylesheet" href="./css/style.css" />
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rosario:ital,wght@0,500;0,700;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/nav.css" />
   </head>
   <body>
     <!-- NAVBAR -->
     <header class="fixed-top">
       <div class="main-menu">
-        <nav
-          class="navbar navbar-expand-lg navbar-light fixed-top"
-          id="transparenciaNavbar">
-          <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/logo.png"
-                class="logo-brand" alt="logo" id="logo"
-                /></a>
-            <a class="navbar-brand h1" href="#">NetFilms</a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ml-auto h5">
-                <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    href="#"
-                    onclick="location.replace('index.html')">Cerrar sesion</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
+        <div class="fixed-top" w3-include-html="nav.html"></div>
       </div>
     </header>
 
@@ -75,7 +56,8 @@
             <button
               type="button"
               class="btn btn-secondary btn-lg"
-              id="agregarPelicula">
+              id="agregarPelicula"
+            >
               Agregar Pelicula
             </button>
           </div>
@@ -84,7 +66,19 @@
         <div id="formularioAgregarPelicula"></div>
       </div>
     </section>
-
-    <script src="./js/admin.js"></script>
+    <!--scripts-->
+    <script src="js/admin.js"></script>
+    <script src="js/includehtml.js"></script>
+    <script>
+      includeHTML();
+    </script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"></script>
   </body>
 </html>
