--- a/cliente.html
+++ b/cliente.html
@@ -14,6 +14,7 @@
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"
     ></script>
     <link rel="stylesheet" href="css/front-style.css" />
+    <link rel="stylesheet" href="css/nav.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -33,23 +34,11 @@
       href="https://fonts.googleapis.com/css2?family=Rosario:ital,wght@0,500;0,700;1,700&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Rosario:ital,wght@0,500;0,700;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
   </head>
 
   <body class="bg-black">
     <header>
-      <div class="fixed-top" w3-include-html="menu.html"></div>
+      <div class="fixed-top" w3-include-html="nav.html"></div>
       <div id="destaca_pelicula">
         
       </div>
@@ -136,12 +125,13 @@
       </div>
     </div>
     <!--//Modal PLAYER -->
+    
+    <!--scripts-->
     <!--Funcion para todos los elementos includes-->
     <script src="js/includehtml.js"></script>
     <script>
       includeHTML();
     </script>
-    <!--scripts nav-->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -150,5 +140,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"></script>
     <script src="js/funciones.js"></script>
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   </body>
 </html>
