--- a/footer.html
+++ b/footer.html
@@ -5,23 +5,23 @@
   <div class="d-flex justify-content-center mt-5 py-5">
     <!-- Facebook -->
     <a href="#">
-      <i class="fa fa-facebook-f white-text fa-2x mx-3"> </i>
+      <i class="fab fa-facebook-f white-text fa-2x mx-3"></i>
     </a>
     <!-- Twitter -->
     <a href="#">
-      <i class="fa fa-twitter white-text fa-2x mx-3"> </i>
+      <i class="fab fa-twitter white-text fa-2x mx-3"> </i>
     </a>
     <!-- Google +-->
     <a href="#">
-      <i class="fa fa-google-plus white-text fa-2x mx-3"> </i>
+      <i class="fab fa-google-plus-g white-text fa-2x mx-3"> </i>
     </a>
     <!--Linkedin -->
     <a href="#">
-      <i class="fa fa-linkedin white-text fa-2x mx-3"> </i>
+      <i class="fab fa-linkedin-in white-text fa-2x mx-3"> </i>
     </a>
     <!--Instagram-->
     <a href="#">
-      <i class="fa fa-instagram white-text fa-2x mx-3"> </i>
+      <i class="fab fa-instagram white-text fa-2x mx-3"> </i>
     </a>
   </div>
 
