arreglo de estilos en botones abm (admin)

--- a/admin.html
+++ b/admin.html
@@ -65,6 +65,12 @@
 
         <div id="formularioAgregarPelicula"></div>
       </div>
+      <footer>
+        <div class="text-center mt-5 py-3">
+          Panel de Administración © 2020
+          <a href="#">NetFilms.com</a>
+        </div>
+      </footer>
     </section>
     <!--scripts-->
     <script src="js/admin.js"></script>
