pequeño cambio en titulos

--- a/cliente.html
+++ b/cliente.html
@@ -9,6 +9,7 @@
       content="videos on line, accion, documentales, series, comedias"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>NetFilms • PLataforma de Videos On-line</title>
     <script
       type="text/javascript"
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"
