--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NetFilms</title>
+    <title>NetFilms • Panel de Administración</title>
 
     <link
       rel="stylesheet"
